room list html hecho

--- a/about.html
+++ b/about.html
@@ -24,10 +24,10 @@
         </a>
         <ul class="links-container">
             <li class="links-container__link">
-                <a class="links-container__link__text" href="">About Us</a>
+                <a class="links-container__link__text" href="about.html">About Us</a>
             </li>
             <li class="links-container__link">
-                <a class="links-container__link__text" href="">Rooms</a>
+                <a class="links-container__link__text" href="room-list.html">Rooms</a>
             </li>
             <li class="links-container__link">
                 <a class="links-container__link__text" href="">Offers</a>
