--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a class="links-container__link__text" href="about.html">About Us</a>
             </li>
             <li class="links-container__link">
-                <a class="links-container__link__text" href="">Rooms</a>
+                <a class="links-container__link__text" href="room-list.html">Rooms</a>
             </li>
             <li class="links-container__link">
                 <a class="links-container__link__text" href="">Offers</a>
