cambios olvidados añadidos a la home page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </a>
         </div>
     </nav>
-    <main>
+    <main class="main">
         <section class="front">
             <article class="front__banner">
                 <h3 class="front__banner__subtitle">THE ULTIMATE LUXURY EXPERIENCE</h3>
@@ -63,23 +63,54 @@
         </section>
 
         <section class="about">
-            <h4 class="about__subtitle">About Us</h4>
-            <h1 class="about__title">Discover Our Underground.</h1>
-            <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                incididunt ut labore et
-                dolore magna aliqua.</p>
-            <a href="#" class="about__link">Learn More</a>
+            <article class="about__images-container">
+                <div class="about__images-container__column">
+                    <img class="about__images-container__column__image" src="assets/images/placeholder-image.png" alt="">
+                    <div class="about__images-container__column__text-container">
+                        <img src="assets/icons/home-page/about-us/team.png" alt="">
+                        <img src="assets/icons/home-page/about-us/team.png" alt="">
+                        <h3>Strong Team</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                    </div>
+                </div>
+                <div class="about__images-container__column about__images-container__column--lower-height">
+                    <img class="about__images-container__column__image" src="assets/images/placeholder-image.png" alt="">
+                    <div class="about__images-container__column__text-container about__images-container__column__text-container--dark-bg">
+                        <img src="assets/icons/home-page/about-us/calendar.png" alt="">
+                        <h3>Luxury Room</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                    </div>
+                </div>
+            </article>
+            <article class="about__text-container">
+                <h4 class="about__text-container__subtitle">About Us</h4>
+                <h1 class="about__text-container__title">Discover Our Underground.</h1>
+                <p class="about__text-container__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                    incididunt ut labore et
+                    dolore magna aliqua.</p>
+                <a href="#" class="about__text-container__link">Learn More</a>
+            </article>
         </section>
 
         <section class="rooms">
-            <h4 class="about__subtitle">Rooms</h4>
+            <h4 class="rooms__subtitle">Rooms</h4>
             <h2 class="rooms__title">Hand Picked Rooms</h2>
             <!-- TODO: Cuando implemente swiper volver aqui-->
             <article>
+                <div>
+                    <img src="assets/icons/home-page/rooms/bed.png" alt="">
+                    <img src="assets/icons/home-page/rooms/wifi.png" alt="">
+                    <img src="assets/icons/home-page/rooms/car.png" alt="">
+                    <img src="assets/icons/home-page/rooms/heater.png" alt="">
+                    <img src="assets/icons/home-page/rooms/gym.png" alt="">
+                    <img src="assets/icons/home-page/rooms/smoke-free.png" alt="">
+                    <img src="assets/icons/home-page/rooms/bar.png" alt="">
+                </div>
+                <img src="assets/images/placeholder-image.png" alt="">
                 <h3>Minimal Duplex Room</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore.</p>
-                <p><strong>$345/Night</strong></p>
+                <p>$345/Night</p>
                 <button>Book Now</button>
             </article>
             <article>
@@ -264,22 +295,22 @@
         <section class="satisfaction">
             <article class="satisfaction__archievement">
                 <img class="satisfaction__archievement__image" src="assets/icons/home-page/numbers/rocket.png" alt="">
-                <h2 class="satisfaction__archievement__title">84k+</h2>
+                <h2 class="satisfaction__archievement__title">84k<span>+</span></h2>
                 <p class="satisfaction__archievement__subtitle">Projects are Completed</p>
             </article>
             <article class="satisfaction__archievement">
-                <img class="satisfaction__archievement__image" src="assets/icons/home-page/numbers/people.png" alt="">
-                <h2 class="satisfaction__archievement__title">10M+</h2>
+                <img class="satisfaction__archievement__image" src="assets/icons/home-page/numbers/employees.png" alt="">
+                <h2 class="satisfaction__archievement__title">10M<span>+</span></h2>
                 <p class="satisfaction__archievement__subtitle">Active Backers Around World</p>
             </article>
             <article class="satisfaction__archievement">
                 <img class="satisfaction__archievement__image" src="assets/icons/home-page/numbers/profit.png" alt="">
-                <h2 class="satisfaction__archievement__title">02k+</h2>
+                <h2 class="satisfaction__archievement__title">02k<span>+</span></h2>
                 <p class="satisfaction__archievement__subtitle">Categories Served</p>
             </article>
             <article class="satisfaction__archievement">
                 <img class="satisfaction__archievement__image" src="assets/icons/home-page/numbers/book.png" alt="">
-                <h2 class="satisfaction__archievement__title">100M+</h2>
+                <h2 class="satisfaction__archievement__title">100M<span>+</span></h2>
                 <p class="satisfaction__archievement__subtitle">Idea Raised Funds</p>
             </article>
         </section>
