pagina room-details

--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
             <!-- TODO: Cuando implemente swiper volver aqui-->
             <article>
                 <div>
-                    <img src="assets/icons/home-page/rooms/bed.png" alt="">
-                    <img src="assets/icons/home-page/rooms/wifi.png" alt="">
-                    <img src="assets/icons/home-page/rooms/car.png" alt="">
-                    <img src="assets/icons/home-page/rooms/heater.png" alt="">
-                    <img src="assets/icons/home-page/rooms/gym.png" alt="">
-                    <img src="assets/icons/home-page/rooms/smoke-free.png" alt="">
-                    <img src="assets/icons/home-page/rooms/bar.png" alt="">
+                    <img src="assets/icons/room-icons-black/bed.png" alt="">
+                    <img src="assets/icons/room-icons-black/wifi.png" alt="">
+                    <img src="assets/icons/room-icons-black/car.png" alt="">
+                    <img src="assets/icons/room-icons-black/heater.png" alt="">
+                    <img src="assets/icons/room-icons-black/gym.png" alt="">
+                    <img src="assets/icons/room-icons-black/smoke-free.png" alt="">
+                    <img src="assets/icons/room-icons-black/bar.png" alt="">
                 </div>
                 <img src="assets/images/placeholder-image.png" alt="">
                 <h3>Minimal Duplex Room</h3>
@@ -114,24 +114,54 @@
                 <button>Book Now</button>
             </article>
             <article>
+                <div>
+                    <img src="assets/icons/room-icons-black/bed.png" alt="">
+                    <img src="assets/icons/room-icons-black/wifi.png" alt="">
+                    <img src="assets/icons/room-icons-black/car.png" alt="">
+                    <img src="assets/icons/room-icons-black/heater.png" alt="">
+                    <img src="assets/icons/room-icons-black/gym.png" alt="">
+                    <img src="assets/icons/room-icons-black/smoke-free.png" alt="">
+                    <img src="assets/icons/room-icons-black/bar.png" alt="">
+                </div>
+                <img src="assets/images/placeholder-image.png" alt="">
                 <h3>Minimal Duplex Room</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore.</p>
-                <p><strong>$345/Night</strong></p>
+                <p>$345/Night</p>
                 <button>Book Now</button>
             </article>
             <article>
+                <div>
+                    <img src="assets/icons/room-icons-black/bed.png" alt="">
+                    <img src="assets/icons/room-icons-black/wifi.png" alt="">
+                    <img src="assets/icons/room-icons-black/car.png" alt="">
+                    <img src="assets/icons/room-icons-black/heater.png" alt="">
+                    <img src="assets/icons/room-icons-black/gym.png" alt="">
+                    <img src="assets/icons/room-icons-black/smoke-free.png" alt="">
+                    <img src="assets/icons/room-icons-black/bar.png" alt="">
+                </div>
+                <img src="assets/images/placeholder-image.png" alt="">
                 <h3>Minimal Duplex Room</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore.</p>
-                <p><strong>$345/Night</strong></p>
+                <p>$345/Night</p>
                 <button>Book Now</button>
             </article>
             <article>
+                <div>
+                    <img src="assets/icons/room-icons-black/bed.png" alt="">
+                    <img src="assets/icons/room-icons-black/wifi.png" alt="">
+                    <img src="assets/icons/room-icons-black/car.png" alt="">
+                    <img src="assets/icons/room-icons-black/heater.png" alt="">
+                    <img src="assets/icons/room-icons-black/gym.png" alt="">
+                    <img src="assets/icons/room-icons-black/smoke-free.png" alt="">
+                    <img src="assets/icons/room-icons-black/bar.png" alt="">
+                </div>
+                <img src="assets/images/placeholder-image.png" alt="">
                 <h3>Minimal Duplex Room</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore.</p>
-                <p><strong>$345/Night</strong></p>
+                <p>$345/Night</p>
                 <button>Book Now</button>
             </article>
         </section>
