paginas room-details-offer y offers hechaas

--- a/room-details-offer.html
+++ b/room-details-offer.html
@@ -47,7 +47,7 @@
     </nav>
     <main class="main">
         <p class="main__identifier">
-            Home | <span class="main__identifier__section">Room Details</span>
+            Home | Room Details | <span class="main__identifier__section">Luxury Double Bed</span>
         </p>
 
         <section class="front">
@@ -65,7 +65,8 @@
                             <h4 class="description__mini-description__subtitle">Double Bed</h4>
                             <h2 class="description__mini-description__title">Luxury Double Bed</h2>
                         </div>
-                        <p class="description__mini-description__price">$345/Night</p>
+                        <p class="description__mini-description__price">$500/Night</p>
+                        <p class="description__mini-description__discount-price">$345/Night</p>
                     </div>
                     <img class="description__image" src="assets/images/placeholder-image.png" alt="">
                     <p class="description__big-description">
