--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a class="links-container__link__text" href="room-list.html">Rooms</a>
             </li>
             <li class="links-container__link">
-                <a class="links-container__link__text" href="">Offers</a>
+                <a class="links-container__link__text" href="offers.html">Offers</a>
             </li>
             <li class="links-container__link">
                 <a class="links-container__link__text" href="">Contact</a>
