pagina contact hecha

--- a/room-details.html
+++ b/room-details.html
@@ -33,7 +33,7 @@
                 <a class="links-container__link__text" href="offers.html">Offers</a>
             </li>
             <li class="links-container__link">
-                <a class="links-container__link__text" href="">Contact</a>
+                <a class="links-container__link__text" href="contact.html">Contact</a>
             </li>
         </ul>
         <div class="navbar__buttons">
@@ -206,7 +206,7 @@
                 <label class="availability-form__label" for="email">Email</label>
                 <input class="availability-form__text-input" type="text" name="email" id="email">
                 <label class="availability-form__label" for="phone">Phone</label>
-                <input class="availability-form__number-input" type="number" name="phone" id="phone">
+                <input class="availability-form__number-input" type="text" name="phone" id="phone">
                 <label class="availability-form__label" for="special-request">Message (Special request)</label>
                 <textarea class="availability-form__textarea-input" name="special-request" id="special-request" cols="30" rows="10">
                 </textarea>
