--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a class="links-container__link__text" href="offers.html">Offers</a>
             </li>
             <li class="links-container__link">
-                <a class="links-container__link__text" href="">Contact</a>
+                <a class="links-container__link__text" href="contact.html">Contact</a>
             </li>
         </ul>
         <div class="navbar__buttons">
