estilos seccion hotel-photos hecho

--- a/index.html
+++ b/index.html
@@ -443,10 +443,19 @@
 
         </section>
 
-        <section class="hotel-images">
-            <img class="hotel-images__image" src="assets/images/placeholder-image.png" alt="">
-            <img class="hotel-images__image" src="assets/images/placeholder-image.png" alt="">
-            <img class="hotel-images__image" src="assets/images/placeholder-image.png" alt="">
+        <section class="hotel-images-swiper swiper">
+            <div class="swiper-wrapper">
+                <article class="swiper-slide">
+                    <img class="hotel-image" src="assets/images/placeholder-image.png" alt="">
+                </article>
+                <article class="swiper-slide">
+                    <img class="hotel-image" src="assets/images/placeholder-image.png" alt="">
+                </article>
+                <article class="swiper-slide">
+                    <img class="hotel-image" src="assets/images/placeholder-image.png" alt="">
+                </article>
+            </div>
+            <div class="swiper-pagination"></div>
         </section>
 
         <section class="satisfaction">
