estilos seccion satisfaction

--- a/index.html
+++ b/index.html
@@ -461,24 +461,32 @@
         <section class="satisfaction">
             <article class="satisfaction__archievement">
                 <img class="satisfaction__archievement__image" src="assets/icons/home-page/numbers/rocket.png" alt="">
-                <h2 class="satisfaction__archievement__title">84k<span>+</span></h2>
-                <p class="satisfaction__archievement__subtitle">Projects are Completed</p>
+                <h2 class="satisfaction__archievement__number">
+                    84k<span class="satisfaction__archievement__number__sign">+</span>
+                </h2>
+                <p class="satisfaction__archievement__name">Projects are Completed</p>
             </article>
             <article class="satisfaction__archievement">
                 <img class="satisfaction__archievement__image" src="assets/icons/home-page/numbers/employees.png"
                     alt="">
-                <h2 class="satisfaction__archievement__title">10M<span>+</span></h2>
-                <p class="satisfaction__archievement__subtitle">Active Backers Around World</p>
+                <h2 class="satisfaction__archievement__number">
+                    10M<span class="satisfaction__archievement__number__sign">+</span>
+                </h2>
+                <p class="satisfaction__archievement__name">Active Backers Around World</p>
             </article>
             <article class="satisfaction__archievement">
                 <img class="satisfaction__archievement__image" src="assets/icons/home-page/numbers/profit.png" alt="">
-                <h2 class="satisfaction__archievement__title">02k<span>+</span></h2>
-                <p class="satisfaction__archievement__subtitle">Categories Served</p>
+                <h2 class="satisfaction__archievement__number">
+                    02k<span class="satisfaction__archievement__number__sign">+</span>
+                </h2>
+                <p class="satisfaction__archievement__name">Categories Served</p>
             </article>
-            <article class="satisfaction__archievement">
+            <article class="satisfaction__archievement satisfaction__archievement--last">
                 <img class="satisfaction__archievement__image" src="assets/icons/home-page/numbers/book.png" alt="">
-                <h2 class="satisfaction__archievement__title">100M<span>+</span></h2>
-                <p class="satisfaction__archievement__subtitle">Idea Raised Funds</p>
+                <h2 class="satisfaction__archievement__number">
+                    100M<span class="satisfaction__archievement__number__sign">+</span>
+                </h2>
+                <p class="satisfaction__archievement__name">Idea Raised Funds</p>
             </article>
         </section>
     </main>
